syntax = "proto3";

package users.v1.response;

option php_namespace = "GRPC\\Services\\Users\\v1";
option php_metadata_namespace = "GRPC\\ProtobufMetadata\\Users\\v1";

import "users/v1/message.proto";

message ListResponse {
  repeated users.v1.dto.User users = 1;
}

message GetResponse {
  users.v1.dto.User user = 1;
}

message CreateResponse {
  users.v1.dto.User user = 1;
}